--- a/FooterBaru.html
+++ b/FooterBaru.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         .footer {
-            background-color: #00A000; /* Green background */
-            color: #000; /* Text color */
+            background-color: #00A000; 
+            color: #000; 
             padding: 20px;
             text-align: left;
             font-family: Arial, sans-serif;
