membuat folder button

--- a/button/Button.html
+++ b/button/Button.html
@@ -1,6 +1,6 @@
 <style>
     .button {
-        background-color: #188D00;
+        background-color: #52A940;
         font-size: 20pt;
         border: none;
         color: #000000;
@@ -11,7 +11,7 @@
         }
     .button:hover {
         color: #0015FF;
-        background-color: #52A940 ;
+        background-color: #7DBF70;
         }
 </style>
 
