--- a/Article Card Perkembangan/Article Card Perkembangan.html
+++ b/Article Card Perkembangan/Article Card Perkembangan.html
@@ -67,7 +67,7 @@
 
     <div class="card-container">
         <div class="card">
-            <img src="https://via.placeholder.com/80" alt="Placeholder Image">
+            <img src="Perkembangan.png">
             <h3>Lorem Ipsum</h3>
             <p>Lorem ipsum odor amet, consectetur adipiscing elit. Dapibus arcu vestibulum torquent hendrerit porttitor.</p>
         </div>
@@ -75,7 +75,7 @@
         <div class="arrow">→</div>
 
         <div class="card">
-            <img src="https://via.placeholder.com/80" alt="Placeholder Image">
+            <img src="Perkembangan.png" alt="Placeholder Image">
             <h3>Lorem Ipsum</h3>
             <p>Lorem ipsum odor amet, consectetur adipiscing elit. Dapibus arcu vestibulum torquent hendrerit porttitor.</p>
         </div>
@@ -83,7 +83,7 @@
         <div class="arrow">→</div>
 
         <div class="card">
-            <img src="https://via.placeholder.com/80" alt="Placeholder Image">
+            <img src="Perkembangan.png" alt="Placeholder Image">
             <h3>Lorem Ipsum</h3>
             <p>Lorem ipsum odor amet, consectetur adipiscing elit. Dapibus arcu vestibulum torquent hendrerit porttitor.</p>
         </div>
