--- a/-Design-Website/Article Card Perkembangan/pug/Article Card Perkembangan.html
+++ b/-Design-Website/Article Card Perkembangan/pug/Article Card Perkembangan.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Article Cards</title><link rel="stylesheet" href="style.css"><style>/* css */
-body {
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Article Cards</title><link rel="stylesheet" href="style.css"><style>body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     margin: 0;
