memperbaiki file header

--- a/Article Card Perkembangan/Article Card Perkembangan.html
+++ b/Article Card Perkembangan/Article Card Perkembangan.html
@@ -6,7 +6,7 @@
     <title>Article Cards</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        <!--css-->
+        /* css */
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
