--- a/Header/header.html
+++ b/Header/header.html
@@ -36,6 +36,10 @@
             cursor: pointer;
             color: black;
         }
+        .navbar .lang-button:hover {
+        color: #0015FF;
+        background-color: #808080;
+        }
     </style>
 </head>
 <body>
