--- a/Article Card Berita/Article Card Berita.html
+++ b/Article Card Berita/Article Card Berita.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Article Cards</title>
     <style>
+        /* css */
         body {
             font-family: Arial, sans-serif;
             background-color: #e9f5e1;
@@ -29,8 +31,8 @@
         }
 
         .card img {
-            width: 100%;
-            height: auto;
+            width: 200px;
+            height: 200px;
             border-radius: 8px;
         }
 
@@ -41,7 +43,7 @@
         }
 
         .card p {
-            font-size: 14px;
+            font-size: 0.875em;
             margin: 10px 0;
             color: #fff;
         }
@@ -73,6 +75,7 @@
 
         .navigation button:hover {
             background-color: #a6d877;
+            color: #0015ff;
         }
     </style>
 </head>
