--- a/Form feedback/Form.html
+++ b/Form feedback/Form.html
@@ -1,118 +1,123 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Example</title>
+    <title>Form Feedback</title>
     <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: #f1f1f1;
-        }
-
         * {
+            margin: 0;
+            padding: 0;
             box-sizing: border-box;
         }
 
-        /* Style the container/contact section */
-        .container {
-            background-color: #fff;
-            padding: 50px;
-            margin: 20px auto;
-            border-radius: 5px;
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
 
-        /* Style the form inputs */
-        input[type="text"], input[type="email"], select, textarea {
+        .form-container {
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
             width: 100%;
-            padding: 12px;
+            max-width: 400px;
+            text-align: center;
+        }
+
+        h1 {
+            color: #4CAF50;
+            margin-bottom: 10px;
+        }
+
+        p {
+            margin-bottom: 20px;
+            color: #555;
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+            text-align: left;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 8px;
+            color: #333;
+        }
+
+        input[type="text"], 
+        input[type="email"] {
+            width: 100%;
+            padding: 10px;
             border: 1px solid #ccc;
             border-radius: 4px;
-            box-sizing: border-box;
-            margin-top: 6px;
-            margin-bottom: 16px;
-            resize: vertical;
+            margin-top: 5px;
+            font-size: 14px;
         }
 
-        /* Style the submit button */
-        input[type="submit"] {
+        .radio-group {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 10px;
+        }
+
+        .radio-group label {
+            display: flex;
+            align-items: center;
+            font-size: 14px;
+        }
+
+        input[type="radio"] {
+            margin-right: 10px;
+        }
+
+        button {
             background-color: #4CAF50;
             color: white;
-            padding: 12px 20px;
             border: none;
+            padding: 10px 20px;
             border-radius: 4px;
             cursor: pointer;
+            font-size: 16px;
         }
 
-        input[type="submit"]:hover {
+        button:hover {
             background-color: #45a049;
-        }
-
-        .col-25 {
-            float: left;
-            width: 25%;
-            margin-top: 6px;
-        }
-
-        .col-75 {
-            float: left;
-            width: 75%;
-            margin-top: 6px;
-        }
-
-        /* Clear floats after the columns */
-        .row:after {
-            content: "";
-            display: table;
-            clear: both;
-        }
-
-        /* Style the labels */
-        label {
-            padding: 12px 12px 12px 0;
-            display: inline-block;
-        }
-
-        /* Style the radio buttons */
-        input[type="radio"] {
-            margin: 5px 0 10px 0;
         }
     </style>
 </head>
 <body>
-
-<div class="container">
-    <h2>Contact Form</h2>
-    <form action="#">
-        <div class="row">
-            <div class="col-25">
-                <label for="name">Name</label>
+    <div class="form-container">
+        <h1>Form Feedback</h1>
+        <p>Kami senang bisa mengetahui umpan balik anda</p>
+        <form>
+            <div class="form-group">
+                <label for="name">Nama *</label>
+                <input type="text" id="name" name="name" placeholder="Nama anda" required>
             </div>
-            <div class="col-75">
-                <input type="text" id="name" name="name" placeholder="Your name.." required>
+            <div class="form-group">
+                <label for="email">E-mail *</label>
+                <input type="email" id="email" name="email" placeholder="contoh@contoh.com" required>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-25">
-                <label for="email">Email</label>
+            <div class="form-group">
+                <label>Tipe Feedback :</label>
+                <div class="radio-group">
+                    <label>
+                        <input type="radio" name="feedback-type" value="Penilaian" required> Penilaian
+                    </label>
+                    <label>
+                        <input type="radio" name="feedback-type" value="Saran / Pertanyaan" required> Saran / Pertanyaan
+                    </label>
+                </div>
             </div>
-            <div class="col-75">
-                <input type="email" id="email" name="email" placeholder="Your email.." required>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-25">
-                <label for="message">Message</label>
-            </div>
-            <div class="col-75">
-                <textarea id="message" name="message" placeholder="Write something.." required style="height:200px"></textarea>
-            </div>
-        </div>
-        <div class="row">
-            <input type="submit" value="Submit">
-        </div>
-    </form>
-</div>
-
+            <button type="submit">Next</button>
+        </form>
+    </div>
 </body>
 </html>
