memperbarui folder Header

--- a/Header/header.html
+++ b/Header/header.html
@@ -107,8 +107,24 @@
                 <a href="#Biodata Penerbit">Biodata Penerbit</a>
             </div>
         </div> 
-        <a href="#activity">Activity ></a>
-        <a href="#recommendation">Recommendation ></a>
+        <div class="dropdown">
+            <button class="dropbtn">Activity > 
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="#berita">Berita</a>
+                <a href="#pengumuman">Pengumuman</a>
+            </div>
+        </div>
+        <div class="dropdown">
+            <button class="dropbtn">Recommendation > 
+                <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+                <a href="#Direkomendasikan">Direkomendasikan</a>
+                <a href="#Review Pengguna">Review Pengguna</a>
+            </div>
+        </div> 
         <a href="#search">🔍Search</a>
         <button class="lang-button">English</button>
     </div>
