--- a/Komponen/Article Card Berita/Article Card Berita.html
+++ b/Komponen/Article Card Berita/Article Card Berita.html
@@ -83,42 +83,42 @@
 
 <div class="container">
     <div class="card">
-        <img src="Berita.jpg" alt="Newspaper Image">
+        <img src="../../img/Berita.jpg" alt="Newspaper Image">
         <h3>Title</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <span>Penulis: Puti Wijaya</span>
         <span>20 Maret 1988</span>
     </div>
     <div class="card">
-        <img src="Berita.jpg" alt="Newspaper Image">
+        <img src="../../img/Berita.jpg" alt="Newspaper Image">
         <h3>Title</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <span>Penulis: Risa Sisi</span>
         <span>26 September 2017</span>
     </div>
     <div class="card">
-        <img src="Berita.jpg" alt="Newspaper Image">
+        <img src="../../img/Berita.jpg" alt="Newspaper Image">
         <h3>Title</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <span>Penulis: Dewi Lestari</span>
         <span>24 Mei 2001</span>
     </div>
     <div class="card">
-        <img src="Berita.jpg" alt="Newspaper Image">
+        <img src="../../img/Berita.jpg" alt="Newspaper Image">
         <h3>Title</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <span>Penulis: Fira Basuki</span>
         <span>15 Agustus 2010</span>
     </div>
     <div class="card">
-        <img src="Berita.jpg" alt="Newspaper Image">
+        <img src="../../img/Berita.jpg" alt="Newspaper Image">
         <h3>Title</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <span>Penulis: Seno Gumira Ajidarma</span>
         <span>2 April 1996</span>
     </div>
     <div class="card">
-        <img src="Berita.jpg" alt="Newspaper Image">
+        <img src="../../img/Berita.jpg" alt="Newspaper Image">
         <h3>Title</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         <span>Penulis: Taufiq Ismail</span>
