--- a/index.html
+++ b/index.html
@@ -1,173 +1,1 @@
-<!DOCTYPE html><html><head><title>Header</title><style>body {
-  margin: 0;
-  font-family: Regular;
-}
-.navbar {
-  background-color: #228B22; 
-  overflow: hidden;
-  padding: 10px;
-}
-.navbar a {
-  float: left;
-  color: black;
-  text-align: center;
-  padding: 32.5px 64px;
-  text-decoration: none;
-  font-size: 32px;
-}
-.navbar a:hover {
-  color: rgb(0,21,255);
-}
-.navbar a.active {
-  background-color: #4CAF50;
-  color: white;
-}
-.navbar .dropdown {
-  float: left;
-  overflow: hidden;
-}
-.navbar .dropdown .dropbtn {
-  font-size: 32px;
-  border: none;
-  outline: none;
-  color: black;
-  padding: 32.5px 64px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-.navbar .dropdown:hover .dropbtn {
-  color: rgb(0,21,255);
-}
-.navbar .dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-.navbar .dropdown-content a {
-  float: none;
-  color: blue;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-.navbar .dropdown-content a:hover {
-  background-color: #ddd;
-}
-.navbar .dropdown:hover .dropdown-content {
-  display: block;
-}
-.navbar .lang-button {
-  float: right;
-  background-color: #7CFC00;
-  border: none;
-  padding: 32.5px 64px;
-  font-size: 32px;
-  cursor: pointer;
-  color: black;
-}
-.navbar .lang-button:hover {
-  color: #0015FF;
-  background-color: #808080;
-}</style></head><body><div class="navbar"><a href="#home">Home</a><div class="dropdown"><button class="dropbtn">Profile ></button><div class="dropdown-content"><a href="#Visi dan Misi">Visi dan Misi</a><a href="#Struktur Organisasi">Struktur Organisasi</a><a href="#Perkembangan">Perkembangan</a><a href="#Unit Kerja">Unit Kerja</a></div></div><div class="dropdown"><button class="dropbtn">Service ></button><div class="dropdown-content"><a href="#Feedback">Feedback</a><a href="#Penggolongan Usia">Penggolongan Usia</a><a href="#Lokasi Perpusum">Lokasi Perpusum</a><a href="#Biodata Penerbit">Biodata Penerbit</a></div></div><div class="dropdown"><button class="dropbtn">Activity ></button><div class="dropdown-content"><a href="#berita">Berita</a><a href="#pengumuman">Pengumuman</a></div></div><div class="dropdown"><button class="dropbtn">Recommendation ></button><div class="dropdown-content"><a href="#Direkomendasikan">Direkomendasikan</a><a href="#Review Pengguna">Review Pengguna</a></div></div><a href="#search">🔍Search</a><button class="lang-button">English</button></div></body></html><!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Article Cards</title><style>/* css */
-body {
-    font-family: Arial, sans-serif;
-    background-color: #e9f5e1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
-.container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    width: 80%;
-}
-
-.card {
-    background-color: #b8e986;
-    border-radius: 8px;
-    padding: 15px;
-    text-align: center;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-}
-
-.card img {
-    width: 200px;
-    height: 200px;
-    border-radius: 8px;
-}
-
-.card h3 {
-    margin-top: 10px;
-    font-size: 18px;
-    color: #fff;
-}
-
-.card p {
-    font-size: 0.875em;
-    margin: 10px 0;
-    color: #fff;
-}
-
-.card span {
-    display: block;
-    font-weight: bold;
-    margin-top: 5px;
-    color: #fff;
-}
-
-.navigation {
-    position: absolute;
-    bottom: 10px;
-    width: 80%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.navigation button {
-    background-color: #b8e986;
-    border: none;
-    padding: 10px 20px;
-    font-size: 14px;
-    border-radius: 5px;
-    cursor: pointer;
-    color: #fff;
-}
-
-.navigation button:hover {
-    background-color: #a6d877;
-    color: #0015ff;
-}
-</style></head><body><div class="container"><div class="card"><img src="../../../img/Berita.jpg" alt="Newspaper Image"><h3>Title</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><span>Penulis: Puti Wijaya</span><span>20 Maret 1988</span></div><div class="card"><img src="../../../img/Berita.jpg" alt="Newspaper Image"><h3>Title</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><span>Penulis: Risa Sisi</span><span>26 September 2017</span></div><div class="card"><img src="../../../img/Berita.jpg" alt="Newspaper Image"><h3>Title</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><span>Penulis: Dewi Lestari</span><span>24 Mei 2001</span></div><div class="card"><img src="../../../img/Berita.jpg" alt="Newspaper Image"><h3>Title</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><span>Penulis: Fira Basuki</span><span>15 Agustus 2010</span></div><div class="card"><img src="../../../img/Berita.jpg" alt="Newspaper Image"><h3>Title</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><span>Penulis: Seno Gumira Ajidarma</span><span>2 April 1996</span></div><div class="card"><img src="../../../img/Berita.jpg" alt="Newspaper Image"><h3>Title</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><span>Penulis: Taufiq Ismail</span><span>9 Juli 1992</span></div></div><div class="navigation"><button>Prev</button><button>Next</button></div></body></html><!DOCTYPE html><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><style>.footer {
-    background-color: #00A000; 
-    color: #000; 
-    padding: 20px;
-    text-align: left;
-    font-family: Arial, sans-serif;
-}
-.footer .social-icons {
-    margin-bottom: 10px;
-}
-.footer .social-icons img {
-    width: 24px;
-    height: 24px;
-    margin: 0 10px;
-    vertical-align: middle;
-}
-.footer .info {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-.footer .info div {
-    width: 30%;
-    min-width: 200px;
-}
-</style></head><body><footer class="footer"><div class="social-icons"><img src="../../../img/Twitter.png" alt="Icon X"><img src="../../../img/Instagram.jpg" alt="Instagram"><img src="../../../img/Youtube.webp" alt="YouTube"><img src="../../../img/Facebook.avif" alt="Facebook"></div><div class="info"><div><h3>Jam Operasional</h3><p>Senin - Jumat &gt; 07.00 - 17.00</p><p>Sabtu - Minggu &gt; 08.00 - 17.00</p><p>Cuti bersama/libur nasional &gt; tutup</p><p>Hak Cipta 2024 &copy; perpusum indonesia</p></div><div><h3>Layanan unggulan</h3><p>&gt; Buku Terbaru</p><p>&gt; Buku Terpopuler</p><p>&gt; Majalah</p></div><div><h3>Kontak Kami:</h3><p>Telepon: 0812345678</p><p>Instagram: perpusum_</p><p>Email: perpusum@gmail.com</p><p>Facebook: perpusum23</p><p>Twitter: @perpusum02</p><p>Alamat: Jl raya lenteng No 2 sumenep</p></div></div></footer></body><!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Berita</title><!DOCTYPE html></head></html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Example Page with Navbar and Cards</title><link rel="stylesheet" href="/path/to/your/style.css"></head><body><!-- Navbar Section--><div class="navbar"><a href="#home">Home</a><div class="dropdown"><button class="dropbtn">Profile ></button><div class="dropdown-content"><a href="#VisiMisi">Visi dan Misi</a><a href="#StrukturOrganisasi">Struktur Organisasi</a><a href="#Perkembangan">Perkembangan</a><a href="#UnitKerja">Unit Kerja</a></div></div><div class="dropdown"><button class="dropbtn">Service ></button><div class="dropdown-content"><a href="#Feedback">Feedback</a><a href="#PenggolonganUsia">Penggolongan Usia</a><a href="#LokasiPerpusum">Lokasi Perpusum</a><a href="#BiodataPenerbit">Biodata Penerbit</a></div></div><div class="dropdown"><button class="dropbtn">Activity ></button><div class="dropdown-content"><a href="#Berita">Berita</a><a href="#Pengumuman">Pengumuman</a></div></div><div class="dropdown"><button class="dropbtn">Recommendation ></button><div class="dropdown-content"><a href="#Direkomendasikan">Direkomendasikan</a><a href="#ReviewPengguna">Review Pengguna</a></div></div><a href="#search">🔍Search</a><button class="lang-button">English</button></div><!-- Cards Section--><div class="container"><div class="card"><img src="Berita.jpg" alt="Newspaper Image"><h3>Title 1</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><span>Penulis: Puti Wijaya</span><span>20 Maret 1988</span></div><div class="card"><img src="Berita.jpg" alt="Newspaper Image"><h3>Title 2</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><span>Penulis: Risa Sisi</span><span>26 September 2017</span></div><div class="card"><img src="Berita.jpg" alt="Newspaper Image"><h3>Title 3</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p><span>Penulis: Dewi Lestari</span><span>24 Mei 2001</span></div></div><!-- Navigation Buttons--><div class="navigation"><button>Prev</button><button>Next</button></div><!-- Footer Section--><div class="footer"><div class="social-icons"><img src="Twitter.png" alt="Icon X"><img src="Instagram.jpg" alt="Instagram"><img src="Youtube.webp" alt="YouTube"><img src="Facebook.avif" alt="Facebook"></div><div class="info"><div><h3>Jam Operasional</h3><p>Senin - Jumat > 07.00 - 17.00</p><p>Sabtu - Minggu > 08.00 - 17.00</p><p>Cuti bersama/libur nasional > tutup</p><p>Hak Cipta 2024 © perpusum indonesia</p></div><div><h3>Layanan Unggulan</h3><p>Buku Terbaru</p><p>Buku Terpopuler</p><p>Majalah</p></div><div><h3>Kontak Kami</h3><p>Telepon: 0812345678</p><p>Instagram: perpusum_</p><p>Email: perpusum@gmail.com</p><p>Facebook: perpusum23</p><p>Twitter: @perpusum02</p><p>Alamat: Jl raya lenteng No 2 sumenep</p></div></div></div></body></html>
+<!-- component/mixins/newsItem.pug--><!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Website Title</title><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"><link rel="stylesheet" href="css/style.css"></head><body><nav class="navbar"><ul class="nav"><li class="nav-item"><a href="#">Home</a></li><li class="nav-item"><a href="#">Profile ></a><ul class="dropdown"><li class="dropdown-item"><a href="#">Visi dan Misi</a></li><li class="dropdown-item"><a href="#">Struktur Organisasi</a></li><li class="dropdown-item"><a href="#">Perkembangan</a></li><li class="dropdown-item"><a href="#">Unit Kerja</a></li></ul></li><li class="nav-item"><a href="#">Service ></a><ul class="dropdown"><li class="dropdown-item"><a href="#">Layanan Umum ></a><ul class="dropdown"><li class="dropdown-item"><a href="#">Feedback</a></li><li class="dropdown-item"><a href="#">Penggolongan Usia</a></li></ul></li><li class="dropdown-item"><a href="#">Layanan Penerbit ></a><ul class="dropdown"><li class="dropdown-item"><a href="#">Penerbit Buku</a></li><li class="dropdown-item"><a href="#">Penerbit Jurnal</a></li></ul></li></ul></li><li class="nav-item"><a href="#">Activity ></a><ul class="dropdown"><li class="dropdown-item"><a href="#">Berita</a></li><li class="dropdown-item"><a href="#">Pengumuman</a></li></ul></li><li class="nav-item"><a href="#">Recommendation ></a><ul class="dropdown"><li class="dropdown-item"><a href="#">Direkomendasikan</a></li><li class="dropdown-item"><a href="#">Review Pengguna</a></li></ul></li><li class="nav-item"><a href="#">Search</a></li><li class="nav-item"><button class="language-btn">English</button></li></ul></nav><div class="layanan-section"><h3>Layanan Kami</h3><div class="layanan-container"><div class="layanan-item"><a href="#">Buku Terbaru</a></div><div class="layanan-item"><a href="#">Buku Terpopuler</a></div><div class="layanan-item"><a href="#">Majalah</a></div></div></div><h1>Berita Terbaru<div class="news-grid"><div class="news-item"><h2>Berita memperingati Kemerdekaan</h2><img src="img/Berita.jpg" alt="Newspaper image"/><p>Lorem ipsum dolor amet, consectetur adipiscing elit. Duis pulvinar tortor hendrerit porta.</p><p class="author">Penulis: John Doe<br/>17 Agustus 2014</p></div><div class="news-item"><h2>Title</h2><img src="img/Berita.jpg" alt="Newspaper image"/><p>Lorem ipsum dolor amet, consectetur adipiscing elit. Duis pulvinar tortor hendrerit porta.</p><p class="author">Penulis: Penulis 2<br/>7 Agustus 1980</p></div><div class="news-item"><h2>Title</h2><img src="img/Berita.jpg" alt="Newspaper image"/><p>Lorem ipsum dolor amet, consectetur adipiscing elit. Duis pulvinar tortor hendrerit porta.</p><p class="author">Penulis: Sasaki Ojoho Danamo<br/>24 Juni 1984</p></div><div class="news-item"><h2>Title</h2><img src="img/Berita.jpg" alt="Newspaper image"/><p>Lorem ipsum dolor amet, consectetur adipiscing elit. Duis pulvinar tortor hendrerit porta.</p><p class="author">Penulis: Andrie Artha<br/>1 September 2005</p></div><div class="news-item"><h2>Title</h2><img src="img/Berita.jpg" alt="Newspaper image"/><p>Lorem ipsum dolor amet, consectetur adipiscing elit. Duis pulvinar tortor hendrerit porta.</p><p class="author">Penulis: Tana Uje<br/>15 Januari 2015</p></div><div class="news-item"><h2>Title</h2><img src="img/Berita.jpg" alt="Newspaper image"/><p>Lorem ipsum dolor amet, consectetur adipiscing elit. Duis pulvinar tortor hendrerit porta.</p><p class="author">Penulis: Ayah Azhar<br/>9 Januari 2014</p></div></div><a class="view-more" href="#">View More</a></h1><div class="lokasi-container"><h2>Lokasi Perpusum</h2><div class="lokasi-map"><img src="path/to/your/map-image.jpg" alt="Peta Lokasi Perpusum"/></div><div class="lokasi-alamat"><p>Jl. Raya Lenteng No 2 Sumenep</p></div></div><footer class="footer-container"><div class="footer-social"><a href="https://www.instagram.com" target="_blank"> <i class="fa fa-instagram"></i></a><a href="https://www.twitter.com" target="_blank"> <i class="fa fa-twitter"></i></a><a href="https://www.facebook.com" target="_blank"> <i class="fa fa-facebook"></i></a></div><div class="footer-info"><div class="footer-section"><h4>Jam Operasional</h4><p>Senin-Jumat > 07:00-17:00</p><p>Sabtu-Minggu > 08:00-17:00</p><p>cuti bersama/libur nasional > tutup</p><p>Hak Cipta 2024 @perpusum Indonesia</p></div><div class="footer-section"><h4>Layanan Unggulan</h4><p>> Buku Terbaru</p><p>> Buku Terpopuler</p><p>> Majalah</p></div><div class="footer-section"><h4>Kontak Kami:</h4><p>Telepon: 0812345678</p><p>Instagram: perpusum_</p><p>Email: perpusum@gmail.com</p><p>Facebook: perpusum23</p><p>Twitter: @perpusum02</p><p>Alamat: Jl. Raya Lenteng No 2 Sumenep</p></div></div></footer></body></html>
